Closed
Bug 380741
Opened 18 years ago
Closed 18 years ago
Trunk [@ nsCOMPtr::StartAssignment] clearing cache or privacy data crashes
Categories
(Core :: Networking: Cache, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: phazon, Assigned: dcamp)
References
()
Details
(Keywords: crash, regression)
Crash Data
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a5pre) Gecko/20070515 Minefield/3.0a5pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a5pre) Gecko/20070515 Minefield/3.0a5pre
Minefield Crash every time i'm trying access about:cache
Talkback reports:
http://talkback-public.mozilla.org/search/start.jsp?search=2&type=iid&id=TB32159814W
http://talkback-public.mozilla.org/search/start.jsp?search=2&type=iid&id=TB32159705W
Reproducible: Always
Steps to Reproduce:
1.Start Minefield
2.type about:cache in address bar
3.press enter
Actual Results:
Immediately minefield crashes
Expected Results:
Listing of presented cache devices
Updated•18 years ago
|
Severity: major → critical
Keywords: crash,
regression
Summary: Minefield Crash every time i'm trying access about:cache → Minefield Crash every time i'm trying access about:cache [@ nsCOMPtr::StartAssignment]
Version: unspecified → Trunk
Comment 1•18 years ago
|
||
Confirmed, I crash as well. Not sure if its related, but I also get a crash using Clear Private Data.
Places Exp build on Vista HP
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9a5pre) Gecko/20070515 Minefield/3.0a5pre ID:2007051503 [cairo][Places Exp]
Comment 2•18 years ago
|
||
Confirmed with trunk build Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a5pre) Gecko/2007051504 Minefield/3.0a5pre
TB32160431W for the crash when clear private data
TB32160348H for crash access about:cache
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: blocking-firefox3?
Comment 3•18 years ago
|
||
Incident ID: 32160348
Stack Signature nsCOMPtr::StartAssignment b7db7775
Product ID FirefoxTrunk
Build ID 2007051504
Trigger Time 2007-05-15 07:41:09.0
Platform Win32
Operating System Windows NT 5.0 build 2195
Module firefox.exe + (000840ac)
URL visited cleared private data
User Comments
Since Last Crash 21 sec
Total Uptime 21 sec
Trigger Reason Access violation
Source File, Line No. e:\builds\tinderbox\fx-trunk\winnt_5.2_depend\mozilla\dist\include\xpcom\nscomptr.h, line 901
Stack Trace
nsCOMPtr<nsIXPCNativeCallContext>::StartAssignment [mozilla/dist/include/xpcom/nscomptr.h, line 901]
table
Maybe related with https://bugzilla.mozilla.org/show_bug.cgi?id=370195 ?
Problem appeared immediately after sql device for the offline cache implemented.
Comment 5•18 years ago
|
||
regressionwindow
works in 20070514_2234_firefox-3.0a5pre.en-US.win32
fails in 20070515_0120_firefox-3.0a5pre.en-US.win32
http://bonsai.mozilla.org/cvsquery.cgi?module=PhoenixTinderbox&date=explicit&mindate=1179207240&maxdate=1179217199
Updated•18 years ago
|
Component: General → Networking: Cache
Flags: blocking-firefox3?
Product: Firefox → Core
QA Contact: general → networking.cache
Updated•18 years ago
|
Summary: Minefield Crash every time i'm trying access about:cache [@ nsCOMPtr::StartAssignment] → Crash with about:cache and clear privacy data[@ nsCOMPtr::StartAssignment]
| Assignee | ||
Updated•18 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Updated•18 years ago
|
Assignee: nobody → dcamp
Status: ASSIGNED → NEW
please see comments on bug 380704.
Comment 7•18 years ago
|
||
only crashes in Clear Private Data if cache is selected.
Updated•18 years ago
|
Flags: blocking1.9?
Comment 9•18 years ago
|
||
If you're having problems with crashing on startup as a result of this bug, open Prefs.js with a text editor and manually change privacy.sanitize.sanitizeOnShutdown to false.
Comment 10•18 years ago
|
||
> please see comments on bug #380704
fixed by the fix for bug #380704.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•18 years ago
|
Flags: in-testsuite?
Comment 11•18 years ago
|
||
I am afraid this is still not fixed on the trunk, at least for today's build; see
TB32242543E
involves build 2007051709
Comment 12•18 years ago
|
||
the fix wasn't landed until after the nightly build. try tomorrow's build
Comment 13•18 years ago
|
||
repopen - still crash TB32243522K
I crash only on clear private data when i select cache
Stack Signature nsCOMPtr::StartAssignment f14b43bc
Product ID FirefoxTrunk
Build ID 2007051704
Trigger Time 2007-05-17 13:51:54.0
Platform Win32
Operating System Windows NT 6.0 build 6000
Module firefox.exe + (0029f57b)
URL visited 380741
User Comments
Since Last Crash 957 sec
Total Uptime 957 sec
Trigger Reason Access violation
Source File, Line No. e:\builds\tinderbox\fx-trunk\winnt_5.2_depend\mozilla\dist\include\xpcom\nscomptr.h, line 901
Stack Trace
nsCOMPtr<nsILineIteratorNavigator>::StartAssignment [mozilla/dist/include/xpcom/nscomptr.h, line 901]
table
nsCacheService::CreateOfflineDevice [mozilla/netwerk/cache/src/nscacheservice.cpp, line 1097]
nsCacheService::EvictEntries [mozilla/netwerk/cache/src/nscacheservice.cpp, line 1041]
XPCWrappedNative::CallMethod [mozilla/js/src/xpconnect/src/xpcwrappednative.cpp, line 2245]
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 14•18 years ago
|
||
sorry for the bugspam ..midair with comment12
Status: REOPENED → RESOLVED
Closed: 18 years ago → 18 years ago
Resolution: --- → FIXED
Comment 15•18 years ago
|
||
I'm re-editing the summary so that it meets given guidelines, directives detailed at
How to file a topcrash bug
http://wiki.mozilla.org/Talkback_Topcrash_Analysis#How_to_file_a_topcrash_bug
Summary: Crash with about:cache and clear privacy data[@ nsCOMPtr::StartAssignment] → Trunk [@ nsCOMPtr::StartAssignment] clearing cache or privacy data crashes
Comment 16•18 years ago
|
||
Tracy, I will try tomorrow's Seamonkey trunk build.
Comment 17•18 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a5pre) Gecko/20070517 Minefield/3.0a5pre ID:2007051711 [cairo]
VERIFIED fixed on Windoze
Updated•18 years ago
|
Status: RESOLVED → VERIFIED
Updated•14 years ago
|
Crash Signature: [@ nsCOMPtr::StartAssignment]
You need to log in
before you can comment on or make changes to this bug.
Description
•