fix for bug #380741:  Crash with about:cache and clear privacy data [@nsCOMPtr::StartAssignment]fall out from bug #380704:  compile error [@nsOfflineCacheDevice::Init]fix by dcamp@mozilla.com, r/sr=biesi