netwerk/cache/src/nsDiskCacheDeviceSQL.cpp
@@ -769,7 +769,7 @@ nsOfflineCacheDevice::Init()
   struct StatementSql {
     nsCOMPtr<mozIStorageStatement> &statement;
     const char *sql;
-    StatementSql (nsCOMPtr<mozIStorageStatement> aStatement, const char *aSql):
+    StatementSql (nsCOMPtr<mozIStorageStatement> &aStatement, const char *aSql):
       statement (aStatement), sql (aSql) {};
   } prepared[] = {
     StatementSql ( mStatement_CacheSize,         "SELECT Sum(DataSize) from moz_cache;" ),
